--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "done-mutation-observer",
   "version": "0.0.1",
-	"main": "done-mutation-observer.js",
+  "main": "done-mutation-observer.js",
   "description": "A quasi mutation observer polyfill (sort of)",
   "homepage": "https://github.com/donejs/done-mutation-observer",
   "repository": {
@@ -13,7 +13,7 @@
     "email": "contact@bitovi.com",
     "url": "https://donejs.com/"
   },
-	"license": "MIT",
+  "license": "MIT",
   "scripts": {
     "preversion": "npm test",
     "version": "git commit -am \"Update version number\"",
@@ -30,6 +30,8 @@
     "donejs-plugin"
   ],
   "devDependencies": {
+    "can-simple-dom": "^1.3.5",
+    "jsdom": "^11.11.0",
     "jshint": "^2.9.1",
     "steal": "^2.0.0",
     "steal-qunit": "^1.0.1",
