--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "donejs-plugin"
   ],
   "devDependencies": {
-    "can-simple-dom": "^1.3.5",
+    "can-vdom": "^4.2.0",
     "jsdom": "^11.11.0",
     "jshint": "^2.9.1",
     "steal": "^2.0.0",
