--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "done-mutation-observer",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "done-mutation-observer.js",
   "description": "A quasi mutation observer polyfill (sort of)",
   "homepage": "https://github.com/donejs/done-mutation-observer",
@@ -49,5 +49,8 @@
         "format": "cjs"
       }
     }
+  },
+  "dependencies": {
+    "can-child-nodes": "^1.2.0"
   }
 }
